--- a/_posts/2019-12-30-the-us-narrative-today.html
+++ b/_posts/2019-12-30-the-us-narrative-today.html
@@ -1664,107 +1664,107 @@ stories:
   domain: http://www.crescent-news.com/
   link: https://www.crescent-news.com/on_the_wire/editors_pick/actress-sara-gilbert-separates-from-wife-singer-linda-perry/image_188ac0e0-aa79-561f-8e4a-5af43d8c8833.html
 images:
-- name: catacombs-catacombs-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-ww2-dresden.jpg
-- name: old-barn-old-barn-1500-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-graham-sutherland.jpg
-- name: oldhouse-granaryfield-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-green-zuma.jpg
-- name: christianity-christianity-under-construction-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-brush.jpg
-- name: copper-circuit-going-to-dowtown-los-angeles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-going-to-dowtown-los-angeles.jpg
-- name: mediterranean-mediterranean-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dark-soul.jpg
-- name: meadowbutterfly-meadow-butterfly-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-circuit.jpg
-- name: oldsmallboat-oldsmallboat-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purple-pond.jpg
-- name: copper-circuit-statue-of-liberty_36744433525_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-of-liberty_36744433525_o.jpg
-- name: berlinwall2-berlinwall-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-creativity.jpg
-- name: oldroad-old-road-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-mucha-mult.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-space-pizza.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-space-pizza.JPG
-- name: oldhotel-oldhotel-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-satan-red.jpg
-- name: ellis-island-ellisisland-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-smooth-ride.jpg
-- name: downtown-los-angeles-downtown-la-aqua.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-aqua.JPG
-- name: fence-fence-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-bright-sand.jpg
-- name: stories-new-68-158-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-158-800-500-0-max-0-1--1.jpg
-- name: yosemite-yosemite-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-alien-goggles.jpg
-- name: bf-skinner-lincoln-memorial_36690528196_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-lincoln-memorial_36690528196_o.jpg
-- name: copper-circuit-statue-capital-cannon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-capital-cannon.jpg
-- name: locked-up-steam-lock-up-steam-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-creativity.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-monet-one.jpg
-- name: old-door-lock-old-door-lock-2-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-kand-two.jpg
-- name: bordercrossing-bordercrossing-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-kand-two.jpg
-- name: oldhousecars-house-old-cars-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-diego-rivera1.jpg
-- name: old-door-lock-old-door-lock-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-colorful-blocks.jpg
-- name: razorcliff-razorcliff.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff.jpg
-- name: crow_alien_goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_alien_goggles.jpg
-- name: carry-load-carryload-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-nazi-poster.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-electricity.jpg
-- name: miamibeach-miamibeach-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-neo-instinct.jpg
-- name: stalin-time-old-piano-playing-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-piano-playing-hospital.jpg
-- name: blossombar-yellow-collage-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-50-62.jpg
-- name: bordercrossing-bordercrossing-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-plentiful.jpg
-- name: oldsmallboat-oldsmallboat-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-colored-circuits.jpg
-- name: stories-new-path-in-the-woods-black-white.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-path-in-the-woods-black-white.jpg
-- name: capital-battle-capitolbattle-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-colorful-blocks.jpg
-- name: crow-crow-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dark-soul.jpg
-- name: store-on-corner-oldcabin-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-smooth-ride.jpg
-- name: stalin-time-british-sgtreet-phone-booth.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-british-sgtreet-phone-booth.jpg
-- name: meadowbutterfly-meadow-butterfly-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-constitution.jpg
-- name: locked-up-steam-lock-up-steam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-smoking-cigarette.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-smoking-cigarette.JPG
-- name: curtain-curtain-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-oily-mcoilface.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-china-prop.jpg
-- name: bf-skinner-statue-supreme-court.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-supreme-court.jpg
-- name: razorwire-DSC-0080-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-smooth-ride.jpg
-- name: rain-princess-container-ship-in-seattle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-container-ship-in-seattle.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
-- name: old-school-house-old-schoolhouse-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-gred-mash.jpg
-- name: power-lines-power-lines-empty-space-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-blocks.jpg
+- name: stories-36575484422-087495fca9-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36575484422-087495fca9-z.jpg
+- name: copper-circuit-eagle-spread-tree-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-eagle-spread-tree-2.jpg
+- name: walled-garden-walled-garden-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-smooth-ride.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit-5.jpg
+- name: border-fence-border-fence-on-hill-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-neo-instinct.jpg
+- name: server-cloud-server-racks-clouds-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-electricity.jpg
+- name: berlinwall2-berlinwall-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-marcel-duchamp.jpg
+- name: fence-gorilla-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-blue-circuit.jpg
+- name: oldhouse-oldhouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-rainbow-festival.jpg
+- name: border-fence-border-fence-on-hill-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-spagetti-accident.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-kandinsky-bv.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-kandinsky-bv.png
+- name: status-berlin-status-berlin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-atari-missle.jpg
+- name: legal-statue-legalstatue-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-bright-sand.jpg
+- name: bordercrossing-bordercrossing-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-rain.jpg
+- name: old-church-oldchurch-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-pablo-blue.jpg
+- name: subway-subway-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-clean-view.jpg
+- name: stalin-time-old-train-on-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-train-on-tracks.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-cinnamon-rolls.jpg
+- name: oldcabin-oldcabin-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-smooth-ride.jpg
+- name: cargo-ship-cargo-ship-on-sea-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-plentiful.jpg
+- name: copper-circuit-downtown-light-posts.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-light-posts.jpg
+- name: berlinwall-DSC-0084-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-light-dali.jpg
+- name: nazi-invasion-city-skyline-bright.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-skyline-bright.jpg
+- name: power-lines-power-lines-empty-space-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-marcel-duchamp.jpg
+- name: razorwire-DSC-0080-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-diego-rivera1.jpg
+- name: stalin-time-capital_36728420065_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-capital_36728420065_o.jpg
+- name: old-school-house-old-schoolhouse-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-purple-storm.jpg
+- name: beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-smooth-ride.jpg
+- name: art-museum-art-museum-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-5.jpg
+- name: braceros-domingo-ulloa-steam-engine-iceland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-steam-engine-iceland.jpg
+- name: stories-new-desert-dragon-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-desert-dragon-horiz-circuit.jpg
+- name: meadowbutterfly-meadow-butterfly-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-atari-missle.jpg
+- name: docks-docks-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-sunday.jpg
+- name: nazi-invasion-statue-facing-scrunched.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-facing-scrunched.jpg
+- name: status-berlin-status-berlin-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-soul.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-far-away.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-far-away.png
+- name: hollywood-building-hollywood-building-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-feed-people.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit.jpg
+- name: server-cloud-server-racks-door-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-clean-view.jpg
+- name: fence-mexico-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-spagetti-accident.jpg
+- name: meadowbutterfly-meadow-butterfly-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-cinnamon-rolls.jpg
+- name: adam-smith-adam-smith-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-brush.jpg
+- name: miamibeach-miamibeach-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dali-three.jpg
+- name: old-granary-field-granaryfield-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-mucha-mult.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-cinnamon-rolls.jpg
+- name: old-cabin-oldcabin-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-rainbow-festival.jpg
+- name: beach-rocks-beach-rocks-currents-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-alien-goggles.jpg
+- name: supreme-court-supremecourt-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kand-two.jpg
+- name: supreme-court-supremecourt-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purple-storm.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-atari-asteroids.jpg
 ---
 As Robots Take Over Warehousing, Workers Pushed To Adapt.&nbsp;Tapper Says Hunter Biden's Ukrainian Contract 'stinks'.&nbsp;Washington Workers Can Soon Access Paid Family Leave Benefit.&nbsp;Resolving For A Healthy 2020? Talking To Your Family Is A Great Way To Start.&nbsp;Development Staff Assists Diocese, Parishes, Schools Through Appeals.&nbsp;Wet Winter Wonderland In Tiburon.&nbsp;Wealaka Chapter Celebrates 10th Year.&nbsp;Dress For Your Body Type.&nbsp;
